fix sidebar overflow

--- a/src/less/chordDiagram.less
+++ b/src/less/chordDiagram.less
@@ -20,7 +20,9 @@
 
 .chord-chart .sidebar.left {
   top: 5px;
+  bottom: 5px;
   left: 5px;
+  overflow: auto;
 }
 
 .chord-chart .sidebar.right {
